--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pip
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.19.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,41 +28,55 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_route: ^5.0.4
+  auto_route_generator: ^5.0.3
+  bloc: ^8.1.0
+  bubble: ^1.2.1
+  build_runner: ^2.3.2
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
+  cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^5.0.1
+  dio_smart_retry: null
+  equatable: ^2.0.5
+  firebase_auth: null
+  firebase_core: null
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_screenutil: ^5.6.1
-  flutter_bloc: ^8.1.2
-  cached_network_image: ^3.2.3
-  url_launcher: ^6.1.10
-  fluttertoast: ^8.2.1
-  get_it: ^7.2.0
-  dio_smart_retry: ^5.0.0
+  flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^2.0.2
+  flutter_screenutil: ^5.6.0
+  flutter_svg: null
+  fluttertoast: ^8.1.1
+  font_awesome_flutter: ^10.4.0
+  freezed: ^2.3.0
+  freezed_annotation: ^2.2.0
+  get_it: ^7.2.0
+  google_sign_in: null
+  http: ^0.13.5
+  json_annotation: ^4.7.0
+  json_serializable: ^6.5.4
+  pin_code_fields: ^7.4.0
+  rename: ^2.0.1
+  requests_inspector: ^2.3.5
+  retrofit: ^4.0.1
+  retrofit_generator: ^6.0.0
+  rxdart: ^0.27.7
+  shared_preferences: ^2.0.15
+  shimmer: ^2.0.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
