--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   retrofit: ^4.0.1
   retrofit_generator: ^6.0.0
   rxdart: ^0.27.7
+  share_plus: ^6.3.1
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   url_launcher: ^6.1.7
