--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pip">
    <application
-        android:label="pip"
+        android:label="PIB"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -30,5 +30,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+           android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyAcvWQdfMH2eKHvaTvM3g5c3N8lLXpKxLg" />    
     </application>
 </manifest>
