--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  flutter_launcher_icons: ^0.12.0
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.6.0
@@ -60,7 +61,7 @@ dependencies:
   json_annotation: ^4.7.0
   json_serializable: ^6.5.4
   pin_code_fields: ^7.4.0
-  rename: ^2.0.1
+  rename: ^2.1.1
   requests_inspector: ^2.3.5
   retrofit: ^4.0.1
   retrofit_generator: ^6.0.0
@@ -74,6 +75,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_logo.png"    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
