--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -75,5 +75,18 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	
+
+<key>NSCameraUsageDescription</key>
+
+<string>to take user  image</string>
+<key>NSPhotoLibraryUsageDescription</key>
+
+<string>To choose user  image</string>
+<key>NSMicrophoneUsageDescription</key>
+
+<string>Used to capture audio for image picker plugin</string>
+
 </dict>
 </plist>
