--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   google_maps_flutter:
   google_sign_in: null
   http:
+  image_picker: ^0.8.7
   json_annotation:
   json_serializable:
   pin_code_fields:
@@ -71,6 +72,7 @@ dependencies:
   shared_preferences:
   shimmer:
   url_launcher:
+  video_player: ^2.6.0
 
 dev_dependencies:
   flutter_lints:
