chat features added

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -77,7 +77,10 @@
 	<true/>
 
 	
-
+<key>NSLocationAlwaysUsageDescription</key>
+<string>Needed to access location</string>
+<key>NSLocationWhenInUseUsageDescription</key>
+<string>Needed to access location</string>
 <key>NSCameraUsageDescription</key>
 
 <string>to take user  image</string>
