--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,7 +71,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.android.support:multidex:2.0.1'
+    implementation 'com.google.firebase:firebase-auth-ktx'
 
     
     
