--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   build_runner:
   cached_network_image:
   carousel_slider:
+  chewie: ^1.4.0
   cupertino_icons:
   dartz:
   dio: ^4.0.6
   dio_smart_retry:
   equatable:
+  file_picker: ^5.2.6
   firebase_auth:
   firebase_core:
   flutter:
@@ -55,6 +57,9 @@ dependencies:
   font_awesome_flutter:
   freezed:
   freezed_annotation:
+  full_screen_image: ^2.0.0
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
   get_it:
   google_maps_flutter:
   google_sign_in: null
@@ -68,6 +73,7 @@ dependencies:
   retrofit:
   retrofit_generator:
   rxdart:
+  screenshot: ^1.3.0
   share_plus:
   shared_preferences:
   shimmer:
