--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   auto_route:
   auto_route_generator:
+  auto_size_text: ^3.0.0
   bloc:
   bubble:
   build_runner:
@@ -54,7 +55,7 @@ dependencies:
   flutter_libphonenumber: ^2.0.0
   flutter_localizations:
     sdk: flutter
-  flutter_screenutil:
+  flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.4
   fluttertoast:
   font_awesome_flutter:
