--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,6 +76,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.1.2'
     implementation "androidx.browser:browser:1.2.0"
+     implementation 'com.facebook.android:facebook-login:latest.release'
+
+    //  implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    // implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    // implementation 'com.google.firebase:firebase-analytics-ktx'
 
 
 
