--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    signingConfigs {
+        key {
+            keyAlias 'key0'
+            keyPassword '12345&TechGo'
+            storeFile file('./key.jks')
+            storePassword '12345&TechGo'
+        }
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -58,9 +65,12 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+
+            signingConfig signingConfigs.key
+        }
+        debug {
+
+            signingConfig signingConfigs.key
         }
     }
 }
